--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,26 @@
 services:
-  # FastAPI サービス（Dev Containers 対応）
+  # FastAPI サービス
   api:
     build:
       context: .
       dockerfile: Dockerfile
       args:
-        BUILD_ENV: ${DOCKER_ENV:-development}
+        BUILD_ENV: ${DOCKER_ENV:-production}
     container_name: ai-sound-api
     ports:
       - "${API_PORT:-8000}:8000"
     volumes:
-      # Dev Containers 用にプロジェクト全体をマウント
-      - .:/app:cached
-      # Git 設定を共有
-      - ~/.gitconfig:/root/.gitconfig:ro
-      # SSH キーを共有（Git 操作用）
-      - ~/.ssh:/root/.ssh:ro
-      - vscode-extensions:/root/.vscode-server/extensions
-      - vscode-extensions-insiders:/root/.vscode-server-insiders/extensions
+      - ./src:/app/src:cached
+      - ./.env:/app/.env:ro
     environment:
       - PYTHONPATH=/app
       - SERVICE_TYPE=api
-      - RELOAD=${DOCKER_HOT_RELOAD:+--reload}
+      - DOCKER_ENV=${DOCKER_ENV:-production}
     env_file:
       - .env
     networks:
       - ai-sound-network
     restart: ${DOCKER_RESTART_POLICY:-unless-stopped}
-    command: sleep infinity
 
   # Streamlit サービス
   streamlit:
@@ -40,12 +33,13 @@ services:
     ports:
       - "${STREAMLIT_PORT:-8501}:8501"
     volumes:
-      - ./src:/app/src:${DOCKER_ENV:+cached}
+      - ./src:/app/src:cached
       - ./.env:/app/.env:ro
       - ./.streamlit:/app/.streamlit:ro
     environment:
       - PYTHONPATH=/app
       - SERVICE_TYPE=streamlit
+      - DOCKER_ENV=${DOCKER_ENV:-production}
     env_file:
       - .env
     networks:
@@ -68,7 +62,7 @@ services:
   #     - postgres_data:/var/lib/postgresql/data
   #   networks:
   #     - ai-sound-network
-  #   restart: ${RESTART_POLICY:-unless-stopped}
+  #   restart: ${DOCKER_RESTART_POLICY:-unless-stopped}
 
   # Redis キャッシュ（将来用）
   # redis:
@@ -81,16 +75,11 @@ services:
   #     - redis_data:/data
   #   networks:
   #     - ai-sound-network
-  #   restart: ${RESTART_POLICY:-unless-stopped}
+  #   restart: ${DOCKER_RESTART_POLICY:-unless-stopped}
 
 networks:
   ai-sound-network:
     driver: bridge
-
-# ボリューム定義（VS Code 拡張機能のキャッシュ用）
-volumes:
-  vscode-extensions:
-  vscode-extensions-insiders:
 
 # volumes:
 #   postgres_data:
