--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "structlog>=24.6.0",
     "streamlit>=1.48.0",
     "streamlit-extras>=0.4.0",
+    "cryptography>=45.0.6",
 ]
 
 [project.optional-dependencies]
