--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     volumes:
       - ./src:/app/src:cached
       - ./.env:/app/.env:ro
+      - ./output:/app/output
     environment:
       - PYTHONPATH=/app
       - SERVICE_TYPE=api
@@ -35,6 +36,7 @@ services:
     volumes:
       - ./src:/app/src:cached
       - ./.env:/app/.env:ro
+      - ./output:/app/output
       - ./.streamlit:/app/.streamlit:ro
     environment:
       - PYTHONPATH=/app
