--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,11 +16,10 @@ dependencies = [
     "python-dotenv>=1.0.0",
     "dependency-injector>=4.43.0",
     "structlog>=24.6.0",
-    "streamlit>=1.48.0",
-    "streamlit-extras>=0.4.0",
     "cryptography>=45.0.6",
     "elevenlabs>=2.12.1",
     "pydub>=0.25.1",
+    "jinja2>=3.1.0",
 ]
 
 [project.optional-dependencies]
