--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
+# 認証設定
+AUTH_ENABLED=true  # 認証を有効にする場合はtrue
+AUTH_PASSWORD=tgs2025  # ログインパスワード（日替わりで変更推奨）
+
 # ElevenLabs API設定
 ELEVENLABS_API_KEY=your_api_key_here
 ELEVENLABS_BASE_URL=https://api.elevenlabs.io/v1
