--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "elevenlabs>=2.12.1",
     "pydub>=0.25.1",
     "jinja2>=3.1.0",
+    "python-multipart>=0.0.20",
 ]
 
 [project.optional-dependencies]
@@ -75,6 +76,7 @@ addopts = "-ra -q --strict-markers --cov=src --cov-report=term-missing --cov-rep
 asyncio_mode = "auto"
 markers = [
     "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
+    "performance: marks tests as performance tests (deselect with '-m \"not performance\"')",
 ]
 
 [tool.coverage.run]
