--- a/.github/workflows/railway-deploy.yml
+++ b/.github/workflows/railway-deploy.yml
@@ -23,6 +23,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     name: Deploy to Railway
+    environment: ${{ github.ref == 'refs/heads/main' && 'production' || 'development' }}
 
     steps:
       - name: Checkout code
@@ -43,40 +44,21 @@ jobs:
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
         run: |
-          # 環境別の環境変数設定
-          if [[ "${{ env.RAILWAY_ENVIRONMENT }}" == "production" ]]; then
-            # 本番環境
-            railway variables --environment production \
-              --set "APP_ENV=production" \
-              --set "ELEVENLABS_API_KEY=${{ secrets.PROD_ELEVENLABS_API_KEY }}" \
-              --set "AUTH_PASSWORD=${{ secrets.PROD_AUTH_PASSWORD }}" \
-              --set "AUTH_ENABLED=${{ secrets.PROD_AUTH_ENABLED }}" \
-              --set "API_PORT=${{ secrets.PROD_API_PORT }}" \
-              --set "APP_HOST=${{ secrets.PROD_APP_HOST }}" \
-              --set "ELEVENLABS_BASE_URL=${{ secrets.PROD_ELEVENLABS_BASE_URL }}" \
-              --set "ELEVENLABS_TIMEOUT=${{ secrets.PROD_ELEVENLABS_TIMEOUT }}" \
-              --set "LOG_LEVEL=${{ secrets.PROD_LOG_LEVEL }}" \
-              --set "API_WORKERS=${{ secrets.PROD_API_WORKERS }}" \
-              --set "STORAGE_PATH=${{ secrets.PROD_STORAGE_PATH }}" \
-              --set "CACHE_ENABLED=${{ secrets.PROD_CACHE_ENABLED }}" \
-              --set "CACHE_TTL=${{ secrets.PROD_CACHE_TTL }}"
-          else
-            # 開発環境
-            railway variables --environment development \
-              --set "APP_ENV=development" \
-              --set "ELEVENLABS_API_KEY=${{ secrets.DEV_ELEVENLABS_API_KEY }}" \
-              --set "AUTH_PASSWORD=${{ secrets.DEV_AUTH_PASSWORD }}" \
-              --set "AUTH_ENABLED=${{ secrets.DEV_AUTH_ENABLED }}" \
-              --set "API_PORT=${{ secrets.DEV_API_PORT }}" \
-              --set "APP_HOST=${{ secrets.DEV_APP_HOST }}" \
-              --set "ELEVENLABS_BASE_URL=${{ secrets.DEV_ELEVENLABS_BASE_URL }}" \
-              --set "ELEVENLABS_TIMEOUT=${{ secrets.DEV_ELEVENLABS_TIMEOUT }}" \
-              --set "LOG_LEVEL=${{ secrets.DEV_LOG_LEVEL }}" \
-              --set "API_WORKERS=${{ secrets.DEV_API_WORKERS }}" \
-              --set "STORAGE_PATH=${{ secrets.DEV_STORAGE_PATH }}" \
-              --set "CACHE_ENABLED=${{ secrets.DEV_CACHE_ENABLED }}" \
-              --set "CACHE_TTL=${{ secrets.DEV_CACHE_TTL }}"
-          fi
+          # 環境変数設定（Environmentから自動的に適切なSecretsが使用される）
+          railway variables --environment ${{ env.RAILWAY_ENVIRONMENT }} \
+            --set "APP_ENV=${{ env.RAILWAY_ENVIRONMENT }}" \
+            --set "ELEVENLABS_API_KEY=${{ secrets.ELEVENLABS_API_KEY }}" \
+            --set "AUTH_PASSWORD=${{ secrets.AUTH_PASSWORD }}" \
+            --set "AUTH_ENABLED=${{ secrets.AUTH_ENABLED }}" \
+            --set "API_PORT=${{ secrets.API_PORT }}" \
+            --set "APP_HOST=${{ secrets.APP_HOST }}" \
+            --set "ELEVENLABS_BASE_URL=${{ secrets.ELEVENLABS_BASE_URL }}" \
+            --set "ELEVENLABS_TIMEOUT=${{ secrets.ELEVENLABS_TIMEOUT }}" \
+            --set "LOG_LEVEL=${{ secrets.LOG_LEVEL }}" \
+            --set "API_WORKERS=${{ secrets.API_WORKERS }}" \
+            --set "STORAGE_PATH=${{ secrets.STORAGE_PATH }}" \
+            --set "CACHE_ENABLED=${{ secrets.CACHE_ENABLED }}" \
+            --set "CACHE_TTL=${{ secrets.CACHE_TTL }}"
 
           # デプロイ実行
           railway up --environment ${{ env.RAILWAY_ENVIRONMENT }}
