fix: Railway CLIインストール方法を公式スクリプトに変更

--- a/.github/workflows/railway-deploy.yml
+++ b/.github/workflows/railway-deploy.yml
@@ -38,7 +38,10 @@ jobs:
           fi
 
       - name: Install Railway CLI
-        run: npm i -g @railway/cli
+        run: |
+          # curlでRailway CLIを直接ダウンロード
+          curl -fsSL https://railway.app/install.sh | sh
+          echo "$HOME/.railway/bin" >> $GITHUB_PATH
 
       - name: Deploy to Railway
         env:
