--- a/.github/workflows/railway-deploy.yml
+++ b/.github/workflows/railway-deploy.yml
@@ -61,4 +61,5 @@ jobs:
           APP_ENV: ${{ env.RAILWAY_ENVIRONMENT }}
         run: |
           # デプロイ実行（環境変数はenvセクションから自動的に設定される）
-          railway up --detach
+          # サービス名を明示的に指定（複数サービス存在時のエラー回避）
+          railway up --service "ai-game-sound-generator-${{ env.RAILWAY_ENVIRONMENT }}" --detach
