fix: railway addコマンドを削除して元の形式に戻す

--- a/.github/workflows/railway-deploy.yml
+++ b/.github/workflows/railway-deploy.yml
@@ -60,8 +60,5 @@ jobs:
           CACHE_TTL: ${{ secrets.CACHE_TTL }}
           APP_ENV: ${{ env.RAILWAY_ENVIRONMENT }}
         run: |
-          # サービスを作成（既に存在する場合はエラーになるが無視）
-          railway add --service "app" || true
-
           # デプロイ実行（環境変数はenvセクションから自動的に設定される）
-          railway up --environment ${{ env.RAILWAY_ENVIRONMENT }} --service "app" --detach
+          railway up --environment ${{ env.RAILWAY_ENVIRONMENT }} --detach
