fix: Railwayデプロイをシンプルな形式に戻す

--- a/.github/workflows/railway-deploy.yml
+++ b/.github/workflows/railway-deploy.yml
@@ -61,4 +61,4 @@ jobs:
           APP_ENV: ${{ env.RAILWAY_ENVIRONMENT }}
         run: |
           # デプロイ実行（環境変数はenvセクションから自動的に設定される）
-          railway up --environment ${{ env.RAILWAY_ENVIRONMENT }} --detach
+          railway up --detach
