--- a/.github/workflows/railway-deploy.yml
+++ b/.github/workflows/railway-deploy.yml
@@ -45,27 +45,10 @@ jobs:
           curl -fsSL https://railway.app/install.sh | sh
           echo "$HOME/.railway/bin" >> $GITHUB_PATH
 
-      - name: Create or link Railway service
-        env:
-          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
-        run: |
-          echo "Setting up service: ${{ env.RAILWAY_SERVICE_NAME }} in ${{ env.RAILWAY_ENVIRONMENT }}"
-
-          # プロジェクトにリンク（環境を指定）
-          railway link --environment "${{ env.RAILWAY_ENVIRONMENT }}"
-
-          # サービスのリストを取得して、対象サービスが存在するか確認
-          if railway service list | grep -q "${{ env.RAILWAY_SERVICE_NAME }}"; then
-            echo "Service ${{ env.RAILWAY_SERVICE_NAME }} already exists"
-          else
-            echo "Creating new service: ${{ env.RAILWAY_SERVICE_NAME }}"
-            # 新しいサービスを作成（名前を指定）
-            railway service create "${{ env.RAILWAY_SERVICE_NAME }}"
-          fi
-
       - name: Deploy to Railway
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+          RAILWAY_PROJECT_ID: ${{ secrets.RAILWAY_PROJECT_ID }}
           ELEVENLABS_API_KEY: ${{ secrets.ELEVENLABS_API_KEY }}
           AUTH_PASSWORD: ${{ secrets.AUTH_PASSWORD }}
           AUTH_ENABLED: ${{ secrets.AUTH_ENABLED }}
@@ -80,6 +63,6 @@ jobs:
           CACHE_TTL: ${{ secrets.CACHE_TTL }}
           APP_ENV: ${{ env.RAILWAY_ENVIRONMENT }}
         run: |
-          # サービスを指定してデプロイ
-          echo "Deploying to service: ${{ env.RAILWAY_SERVICE_NAME }}"
-          railway up --service "${{ env.RAILWAY_SERVICE_NAME }}" --detach
+          # デプロイ実行（サービス名と環境を指定）
+          echo "Deploying to Railway: ${{ env.RAILWAY_SERVICE_NAME }} in ${{ env.RAILWAY_ENVIRONMENT }}"
+          railway up --service "${{ env.RAILWAY_SERVICE_NAME }}" --environment "${{ env.RAILWAY_ENVIRONMENT }}" --detach
