fix: Railway デプロイにサービス名を指定

--- a/.github/workflows/railway-deploy.yml
+++ b/.github/workflows/railway-deploy.yml
@@ -62,7 +62,7 @@ jobs:
           CACHE_TTL: ${{ secrets.CACHE_TTL }}
           APP_ENV: ${{ env.RAILWAY_ENVIRONMENT }}
         run: |
-          echo "Deploying to Railway"
+          echo "Deploying to Railway service: ${{ env.RAILWAY_SERVICE_NAME }}"
 
-          # 最もシンプルな形式でデプロイ（トークンのみ使用）
-          RAILWAY_TOKEN="${{ secrets.RAILWAY_TOKEN }}" railway up --detach
+          # トークンとサービス名を指定してデプロイ
+          RAILWAY_TOKEN="${{ secrets.RAILWAY_TOKEN }}" railway up --service "${{ env.RAILWAY_SERVICE_NAME }}" --detach
