--- a/.github/workflows/railway-deploy.yml
+++ b/.github/workflows/railway-deploy.yml
@@ -33,23 +33,15 @@ jobs:
         run: |
           if [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
             echo "RAILWAY_ENVIRONMENT=production" >> $GITHUB_ENV
-            echo "RAILWAY_SERVICE_NAME=ai-game-sound-generator" >> $GITHUB_ENV
           else
             echo "RAILWAY_ENVIRONMENT=development" >> $GITHUB_ENV
-            echo "RAILWAY_SERVICE_NAME=dev-ai-game-sound-generator" >> $GITHUB_ENV
           fi
 
       - name: Install Railway CLI
         run: |
-          # Railway CLIをインストール
+          # curlでRailway CLIを直接ダウンロード
           curl -fsSL https://railway.app/install.sh | sh
-
-          # PATHを即座に更新
-          export PATH="$HOME/.railway/bin:$PATH"
-
-          # 確認
-          which railway || echo "Railway not found in PATH"
-          railway version || echo "Railway version check failed"
+          echo "$HOME/.railway/bin" >> $GITHUB_PATH
 
       - name: Deploy to Railway
         env:
@@ -68,14 +60,5 @@ jobs:
           CACHE_TTL: ${{ secrets.CACHE_TTL }}
           APP_ENV: ${{ env.RAILWAY_ENVIRONMENT }}
         run: |
-          # PATHを設定
-          export PATH="$HOME/.railway/bin:$PATH"
-
-          echo "Available Railway services:"
-          RAILWAY_TOKEN="${{ secrets.RAILWAY_TOKEN }}" railway service list || echo "Failed to list services"
-
-          echo ""
-          echo "Attempting to deploy to: ${{ env.RAILWAY_SERVICE_NAME }}"
-
-          # トークンとサービス名を指定してデプロイ
-          RAILWAY_TOKEN="${{ secrets.RAILWAY_TOKEN }}" railway up --service "${{ env.RAILWAY_SERVICE_NAME }}" --detach
+          # デプロイ実行（サービス名はSecretsから取得）
+          railway up --service "${{ secrets.RAILWAY_SERVICE_NAME }}" --detach
