fix: Railway CLIの認証とプロジェクトID設定を改善

--- a/.github/workflows/railway-deploy.yml
+++ b/.github/workflows/railway-deploy.yml
@@ -26,9 +26,24 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Use Railway
-        uses: railway/cli@v3
-        with:
-          command: up --service ${{ secrets.RAILWAY_SERVICE_NAME }} --detach
+      - name: Install Railway CLI
+        run: |
+          # Railway CLI をインストール
+          curl -fsSL https://railway.app/install.sh | sh
+          echo "$HOME/.railway/bin" >> $GITHUB_PATH
+
+      - name: Deploy to Railway
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+        run: |
+          # Railway CLI のバージョン確認
+          railway --version
+
+          # 認証状態を確認し、必要に応じてログイン
+          railway whoami || echo "Not authenticated, proceeding with token..."
+
+          # プロジェクトIDを環境変数として設定してデプロイ
+          export RAILWAY_PROJECT_ID=${{ secrets.RAILWAY_PROJECT_ID }}
+
+          # デプロイ実行（サービス名を指定）
+          railway up --service "${{ secrets.RAILWAY_SERVICE_NAME }}" --detach
