feat: デモ機IPアドレスによるレート制限除外機能

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,11 @@
 AUTH_ENABLED=true  # 認証を有効にする場合はtrue
 AUTH_PASSWORD=tgs2025  # ログインパスワード（日替わりで変更推奨）
 
+# TGS展示デモ機設定
+# デモ機のIPアドレスをカンマ区切りで指定（レート制限が適用されません）
+# 例: DEMO_IP_ADDRESSES=192.168.1.100,192.168.1.101,192.168.1.102
+DEMO_IP_ADDRESSES=
+
 # ElevenLabs API設定
 ELEVENLABS_API_KEY=your_api_key_here
 ELEVENLABS_BASE_URL=https://api.elevenlabs.io/v1
