--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ dependencies = [
     "pydub>=0.25.1",
     "jinja2>=3.1.0",
     "python-multipart>=0.0.20",
+    "aiohttp>=3.10.0",
+    "psutil>=6.0.0",
 ]
 
 [project.optional-dependencies]
