feat: データベース統計記録機能とエラーハンドリングの実装

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,11 @@ dependencies = [
     "python-multipart>=0.0.20",
     "aiohttp>=3.10.0",
     "psutil>=6.0.0",
+    "sqlalchemy>=2.0.0",
+    "alembic>=1.13.0",
+    "asyncpg>=0.29.0",
+    "aiosqlite>=0.20.0",
+    "greenlet>=3.0.0",
 ]
 
 [project.optional-dependencies]
