feat: レート制限の有効/無効を環境変数で制御可能に

--- a/.env.example
+++ b/.env.example
@@ -39,3 +39,9 @@ CACHE_MAX_SIZE=1000
 STORAGE_PATH=./storage
 STORAGE_AUDIO_DIR=audio
 STORAGE_TEMP_DIR=temp
+
+# レート制限設定
+RATE_LIMIT_ENABLED=true  # レート制限を有効にする場合はtrue（デモ機は常に除外）
+RATE_LIMIT_PER_HOUR=10  # 1時間あたりの最大生成回数
+RATE_LIMIT_BURST=3  # 短期間での連続生成許容数
+RATE_LIMIT_MIN_INTERVAL=5  # 生成間隔の最小秒数
