--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ DEMO_IP_ADDRESSES=
 # Slack通知設定（オプション）
 # Webhook URLを設定すると、稼働状況レポートが自動送信されます
 # 例: SLACK_WEBHOOK_URL=https://hooks.slack.com/services/T00000000/B00000000/XXXXXXXXXXXXXXXXXXXX
+SLACK_ENABLED=true  # Slack通知を有効にする場合はtrue
 SLACK_WEBHOOK_URL=
 
 # ElevenLabs API設定
